--- a/gestion-projet/rapport.tex
+++ b/gestion-projet/rapport.tex
@@ -141,7 +141,7 @@ Pour gérer les bugs et pouvoir tester notres serveur, il nous fallait un systè
 A propos de la sécurité du serveur, Wezkzeug permet de hasher les mots de passe lors de la sauvegarde de ceux-ci dans la base de données. Le hashage du mot de passe avant le stockage est une étape primordiale pour la sécurité des données et pour s’assurer de la sûreté des comptes utilisateurs et de leur mot de passe.
 
 \section{Visuel des pages Web}
-Pour la réalisation de l’aspect visuel de l’application, nous avons utilisé plusieurs ressources différentes. Tout d’abord, notre site web est en entièreté codé en CSS. Nous avons fait le choix de ne pas utiliser de moyen tiers comme Bootstrap. Celui-ci nous limite grandement dans l’implémentation d’un beau visuel mais nous avions l’envie de concevoir notre site à 100\%. Le CSS a été une part entière du développement de notre application. \\
+Pour la réalisation de l’aspect visuel de l’application, nous avons utilisé plusieurs ressources différentes. Tout d’abord, notre site web est en entièreté codé en CSS. Nous avons fait le choix de ne pas utiliser de moyen tiers comme Bootstrap. Ce choix nous limite grandement dans l’implémentation d’un beau visuel mais nous avions l’envie de concevoir notre site à 100\%. Le CSS a été une part entière du développement de notre application. \\
 
 De plus, à l’aide de Flask et des templates html, nous avons pu rendre notre site plus agréable. Un des meilleurs exemples est la barre de navigation. Elle est séparée du reste des pages html et est implémenté dans chacune de celles-ci en y précisant une variable. Ainsi, elle reconnait sur quels endroits du site elle se situe et modifie la couleur de l’endroit courant. \\
 
